correct gap

--- a/src/components/MeetTeam/MeetTeam.css
+++ b/src/components/MeetTeam/MeetTeam.css
@@ -15,6 +15,7 @@
     /* padding-left: 1.5vw;
     padding-right: 1.5vw; */
     flex-wrap: wrap;
+    padding-bottom: 65px;
 }
 .teamm p{padding-top: 1vw;font-size: 5vw;color: #094D7A;font-family: Raleway;font-weight: 600}
 .cardbox{
@@ -22,7 +23,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap:12vw;
+    gap:70px;
     flex-wrap: wrap;
 }
 .teamCard{
@@ -32,6 +33,8 @@
     box-shadow: 0px 0px 20px 0px #00000040;
     /* z-index: -1; */
     position:relative;
+    margin-left: 3vw;
+    margin-right: 3vw;
 }
 .nameCard{
     z-index: 100;
